--- a/src/highliukreversitutorial.css
+++ b/src/highliukreversitutorial.css
@@ -63,3 +63,9 @@
         background-repeat: none;
     }
 */
+
+#board {
+  width: 536px;
+  height: 528px;
+  background-image: url("img/board.jpg");
+}
